3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

lib/*: different spell for dragons vs players for firebreath - update
   treasures so monsters use ability version.
server/gods.c: Add missing call to link_player_skills(), resulting in players
   having multiple praying skills.
server/skill_util.c: Change learn_skill() so we don't create a skill pointer
   for the player if they didn't learn the skill (even if they can't use
   such a created skill, it is still a bit confusing).  Fix finding of
   hand to hand skills to make sure the player can in fact use the skill
   in question.
MSW 2004-02-22


include/define.h,server/shop.c: Apply patch by Bernd Edler that gives
   bargaining experience based on the amount of money a character saves.
   Higher the bargaining skill, the more money they can save.
MSW 2004-02-16

doc/Developers/spells: Update type on casting_time - include suggested value
  for times so that results are hopefully more coherent.
lib/archetypes, treasures.bld: rebuilt.
lib/treasures: Change some of the 'spelldirect' types to just the actual spells,
   so that two seperate archs don't have to be maintained.
server/c_wiz.c: Add some basic sanity checking to command_remove() so that
   we don't unnecessarily crash.
server/skills.c: write_scroll() - have it reset value of the scroll so that
   the scrolls so inscribed by players have better chance of merging.
server/spell_attack.c: cast_cone() - if the caster is a trap, have it hit
   the center space, so that characters who detonate cone traps will get hit
   by the effects.  Also, reduce range of cone spells if they are going
   in all directions, compared to being targetted in a speciifc direction.